# bzr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.claude/agent-memory/bugzilla-rust-reviewer/: MEMORY.md
.claude/agent-memory/markdown-docs-reviewer/: MEMORY.md
.claude/agents/: bugzilla-rust-reviewer.md  markdown-docs-reviewer.md
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/: bzr-cli.md  skills.md
src/: auth.rs  cli.rs  client.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  output.rs  test_helpers.rs  types.rs  xmlrpc.rs  xmlrpc_client.rs
src/cli/: attachment.rs  bug.rs  classification.rs  comment.rs  component.rs  config.rs  field.rs  group.rs  mod.rs  product.rs  server.rs  template.rs  user.rs
src/client/: attachment.rs  attachments.rs  auth.rs  bug.rs  bugs.rs  classification.rs  comment.rs  comments.rs  component.rs  components.rs  field.rs  group.rs  groups.rs  mod.rs  product.rs  products.rs  server.rs  user.rs  users.rs  version.rs
src/client/auth/: mod.rs  valid_login.rs  whoami.rs
src/commands/: attachment.rs  bug.rs  classification.rs  comment.rs  component.rs  config.rs  config_cmd.rs  field.rs  flags.rs  group.rs  mod.rs  product.rs  server.rs  shared.rs  template.rs  test_helpers.rs  user.rs  whoami.rs
src/output/: attachment.rs  bug.rs  classification.rs  comment.rs  common.rs  config.rs  field.rs  group.rs  mod.rs  product.rs  result_types.rs  server.rs  template.rs  user.rs
src/types/: attachment.rs  bug.rs  comment.rs  common.rs  group.rs  mod.rs  product.rs  user.rs
src/xmlrpc/: client.rs  mod.rs
tests/: integration.rs
tests/functional/: README.md  entrypoint.sh  lib.sh  run-all-versions.sh  run-tests.sh  setup-bugzilla.sh
tests/functional/versions/bz50/: Containerfile  entrypoint.sh
tests/functional/versions/bz52/: Containerfile  entrypoint.sh
tests/functional/versions/bz53/: Containerfile  entrypoint.sh
