[package]
name = "bzr"
version = "0.1.0"
edition = "2021"
description = "A CLI for Bugzilla, inspired by gh"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "6"
tabled = "0.17"
thiserror = "2"
colored = "3"
