[package]
name = "bzr"
version = "0.1.0"
edition = "2021"
description = "A CLI for Bugzilla, inspired by gh"
license = "MIT"
rust-version = "1.70"
repository = "https://github.com/randomparity/bzr"
homepage = "https://github.com/randomparity/bzr"
keywords = ["bugzilla", "cli", "bug-tracker"]
categories = ["command-line-utilities"]

[features]
# Exposes test helpers from the library for integration tests.
# Activated automatically via dev-dependency below.
test-helpers = ["dep:wiremock", "dep:tempfile"]

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
toml = "0.8"
dirs = "6"
tabled = "0.17"
thiserror = "2"
colored = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
percent-encoding = "2"
quick-xml = "0.37"
# Optional: used only by test-helpers feature
wiremock = { version = "0.6", optional = true }
tempfile = { version = "3", optional = true }

[dev-dependencies]
serde_urlencoded = "0.7"
tempfile = "3"
wiremock = "0.6"
bzr = { path = ".", features = ["test-helpers"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "warn"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
module_name_repetitions = "allow"
similar_names = "allow"
